<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="back">返回</string>

    <string name="app_name">投研社</string>
    <string name="press_more_times_for_exit">再按一次退出客户端</string>
    <string name="list_empty">让研究更有价值</string>
    <string name="list_loading">列表加载中</string>
    <string name="refresh_failed">数据获取失败</string>
    <string name="check_network_retry">请检查网络后轻点屏幕重试</string>
    <string name="refresh_lists">刷新列表...</string>
    <string name="error_str">好像出错了哦~</string>

    <string name="login">登录</string>
    <string name="login_phone_hint">输入11位手机号码</string>
    <string name="login_verification_title">获取验证码</string>
    <string name="login_verification_hint">输入验证码</string>
    <string name="login_next">下一步</string>
    <string name="login_fulfil">完成</string>
    <string name="exit">退出</string>
    <string name="define">确定</string>
    <string name="cancel">取消</string>
    <string name="login_username">账户</string>
    <string name="login_userpass">密码</string>


    <string name="register">注册</string>

    <string name="resetpassword">重置密码</string>

    <string name="main_investment">投研社</string>
    <string name="main_recommend">荐股</string>
    <string name="main_gung">啦呱</string>
    <string name="main_me">我</string>

    <string name="investment_info">资讯</string>
    <string name="investment_info_es">Info</string>
    <string name="investment_act">活动</string>
    <string name="investment_act_es">Act</string>
    <string name="investment_offer">悬赏</string>
    <string name="investment_offer_es">Offer</string>
    <string name="release_explanation">注：不公开发布的资讯将无法在“投研社”中查看，\n发布者可以在“我的”-“我的活动”中查看</string>
    <string name="release_switch_public">资讯公开发布</string>
    <string name="release_switch_coin">资讯收费</string>
    <string name="release_photo_count">添加图片\n(0/9)</string>
    <string name="release_hint_value">填写内容</string>
    <string name="review_hint_value">写点什么吧...</string>
    <string name="release_hint_title">添加标题</string>
    <string name="release_info">发布资讯</string>
    <string name="review">发表评论</string>
    <string name="release">发布</string>
    <string name="send">发送</string>
    <string name="share_friend">转发给朋友</string>
    <string name="share_group">转发到群组</string>
    <string name="share">转发</string>
    <string name="bottom_menu_share">转发</string>
    <string name="bottom_menu_review">评论</string>
    <string name="bottom_menu_collect">收藏</string>
    <string name="bottom_menu_reward">打赏</string>
    <string name="bottom_menu_sign">已报名</string>
    <string name="bottom_menu_unsign">我要报名</string>
    <string name="bottom_menu_signdetail">报名详情</string>
    <string name="bottom_menu_reply">回答</string>
    <string name="info_reward_title">选择打赏金额</string>
    <string name="reward_purchase_money">购买金币</string>
    <string name="accounts_balance">账户余额：</string>
    <string name="need_pay">需要支付：</string>
    <string name="unpacking">拆封</string>
    <string name="info_detail">资讯详情</string>
    <string name="friends">小伙伴</string>
    <string name="release_act_roadshow">发布路演</string>
    <string name="release_act_product">发布产品</string>
    <string name="act_attri">活动属性</string>
    <string name="act_limit_number">人数限制</string>
    <string name="act_people">人</string>
    <string name="act_release_roadshow_title">路演主题</string>
    <string name="act_release_roadshow_title_hint">输入路演主题</string>
    <string name="act_release_roadshow_date">路演时间</string>
    <string name="act_release_roadshow_date_hint">选择路演开始时间</string>
    <string name="act_release_roadshow_value_hint">填写详细内容（如：活动介绍、详细活动地点、联系人等）</string>
    <string name="act_release_roadshow_city">所在城市</string>
    <string name="act_release_roadshow_city_hint">选择路演所在城市</string>
    <string name="act_release_product_title">产品名称</string>
    <string name="act_release_product_title_hint">输入产品名称</string>
    <string name="act_release_product_date">预约截止</string>
    <string name="act_release_product_date_hint">选择预约截止时间</string>
    <string name="act_release_product_value_hint">填写产品详细信息（如：组合产品的类型、投资方向、募集金额及份数等）</string>
    <string name="act_switch_public">活动公开发布</string>
    <string name="act_release_type">选择发布类型</string>
    <string name="act_release_product">组合产品</string>
    <string name="act_release_roadshow">互动路演</string>
    <string name="act_detail">活动详情</string>
    <string name="adoption_reply">采纳答案</string>
    <string name="offer_detail">悬赏详情</string>
    <string name="offer_reply_public">回答内容公开</string>
    <string name="offer_attri">其他选项</string>
    <string name="release_reply_explanation">注：若回答内容不公开，其他用户将无法看到</string>
    <string name="offer_money">悬赏金额：</string>
    <string name="offer_release">发布悬赏</string>
    <string name="offer_release_value_hint">请试着将问题尽可能清晰、详细的描述出来，这样回答者们才能更高质量的为您解答</string>
    <string name="money">金币</string>
    <string name="sign_detail">报名情况</string>
    <string name="login_prompt">正在登陆</string>


    <!--我-设置 -->

    <string name="setting_str">设置</string>
    <string name="reset_password">修改密码</string>
    <string name="receive_message">接收新消息</string>
    <string name="clean_message">清空聊天记录</string>
    <string name="about_investment">关于投研社</string>
    <string name="login_out">退出登录</string>

    <!--我-我的悬赏   我的活动     我的资讯-->
    <string name="me_offer_reward">我的悬赏</string>
    <string name="me_activity">我的活动</string>
    <string name="me_info">我的资讯</string>

    <string name="me_offer_reward_edit">编辑</string>

    <string name="me_original_info">原创资讯</string>
    <string name="me_purchase_info">购买资讯</string>

    <string name="me_myrelease">我发布的</string>
    <string name="me_mypartake">我参与的</string>

    <string name="about_inv">关于</string>
    <string name="notice">通知</string>
    <string name="about_version">投研社1.2</string>
    <string name="about_check_update">检测更新</string>
    <string name="about_goscore">去评分</string>
    <string name="about_email">Email：yixiao.shi@touyanshe.com</string>
    <string name="about_company">上海投言互联网科技有限公司 版权所有</string>

    <!--我-修改密码 -->
    <string name="change_pw">修改密码</string>
    <string name="original_pw">原密码</string>
    <string name="original_pw_hint">请输入原始密码</string>
    <string name="new_pw">新密码</string>
    <string name="new_pw_hint">请设置新密码</string>
    <string name="second_new_pw">重复密码</string>
    <string name="second_new_pw_hint">请再次输入新密码</string>
    <string name="confirm">确认</string>


    <string name="user_head">头像</string>
    <string name="user_name">名字</string>
    <string name="user_company">公司</string>
    <string name="user_city">地区</string>
    <string name="user_occupation">职业</string>
    <string name="user_unauthenticated">未认证</string>
    <string name="user_authenticated">已认证</string>

    <string name="user_follow">关注</string>
    <string name="user_fans">粉丝</string>
    <string name="user_collect">收藏</string>
    <string name="user_wallet">钱包</string>
    <string name="user_information">我的资讯</string>
    <string name="user_activity">我的活动</string>
    <string name="user_reward">我的悬赏</string>
    <string name="user_setting">我的设置</string>
    <string name="user_authenticated_btn">申请认证</string>

    <string name="user_tag">标签</string>

    <string name="modify_userinfo_toolbar_title">编辑</string>
    <string name="modify_usertag_toolbar_title">编辑标签</string>

    <string name="modify_usertag_gridview_headtext">请选择不多于三个最符合您身份的标签：</string>


    <string name="contents_not_empty">内容不能为空哦</string>

    <string name="carrying">稍等片刻</string>

    <string name="success">操作成功</string>


    <string name="data_uploading">数据上传中</string>

    <string name="data_downloading">数据加载中</string>

    <string name="success_review">操作成功,刷新下看看吧</string>

    <string name="collecting">正在收藏</string>
    <string name="audit">审核中</string>
    <string name="not_participate">我要报名</string>
    <string name="no_by">未通过</string>
    <string name="by">已报名</string>

    <string name="me_attention">我的关注</string>

    <string name="modify_complete">完成</string>
    <string name="modify_delete">删除</string>

    <string name="agreement">删除</string>
    <string name="select_role">请选择角色</string>
    <string name="analyst">分析师</string>
    <string name="investors">投资人</string>
    <string name="expert">专家</string>
    <string name="broker">经纪人</string>
    <string name="user_detail_fragment_title">个人发布</string>
    <string name="cancel_attention">取消关注</string>
    <string name="delete">删除</string>

    <string name="add">添加</string>

    <string name="mayknow">可能认识的人</string>
    <string name="create_group">创建群组</string>
    <string name="create">创建</string>

    <string name="group_head">头像</string>
    <string name="group_head_instruction">点击头像更改</string>

    <string name="group_name">群名称</string>
    <string name="group_input">请填写群名称（2-10个字）</string>
    <string name="search_visible">搜索可见</string>

    <string name="hotgroup">热门群组</string>

    <string name="groups_top_message">群置顶消息</string>

    <string name="groups_empty_tip">您还没加入群组\n点击屏幕右上角“+”来加入或创建群组吧</string>
    <string name="friends_empty_tip">您还没好友\n点击屏幕右上角“+”来邀请好友吧</string>

    <!--环信-->
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice">[声音]</string>
    <string name="voice_call">[语音通话]</string>
</resources>
