<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/register_white"
              android:orientation="vertical">
        <include android:id="@+id/toolbar"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 layout="@layout/action_toolbar"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                >

                <TextView android:layout_width="70dp"
                          android:layout_height="wrap_content"
                          android:text="@string/original_pw"
                          android:textColor="@color/textcolor_444"
                          android:textSize="@dimen/font_small"
                        />
                <EditText
                        android:id="@+id/original_pw_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/textcolor_444"
                        android:hint="@string/original_pw_hint"
                        android:textColorHint="@color/textcolor_888"
                        android:password="true"
                        android:textSize="@dimen/font_small"/>
        </LinearLayout>
        <View android:layout_width="match_parent"
                  android:layout_height="@dimen/content_1dp"
                  android:background="@drawable/user_horizontal_divider"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                >

                <TextView android:layout_width="70dp"
                          android:layout_height="wrap_content"
                          android:text="@string/new_pw"
                          android:textColor="@color/textcolor_444"
                          android:textSize="@dimen/font_small"
                        />
                <EditText
                        android:id="@+id/new_pw_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/textcolor_444"
                        android:hint="@string/new_pw_hint"
                        android:textColorHint="@color/textcolor_888"
                        android:password="true"
                        android:textSize="@dimen/font_small"/>
        </LinearLayout>
        <View android:layout_width="match_parent"
              android:layout_height="@dimen/content_1dp"
              android:background="@drawable/user_horizontal_divider"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                >

                <TextView android:layout_width="70dp"
                          android:layout_height="wrap_content"
                          android:text="@string/second_new_pw"
                          android:textColor="@color/textcolor_444"
                          android:textSize="@dimen/font_small"
                        />
                <EditText
                        android:id="@+id/second_new_pw_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/textcolor_444"
                        android:hint="@string/second_new_pw_hint"
                        android:textColorHint="@color/textcolor_888"
                        android:password="true"
                        android:textSize="@dimen/font_small"/>
        </LinearLayout>
</LinearLayout>